Look for why ChromeOS bots are flakily using software compositing.

This adds some NOTREACHED() on ChromeOS to figure out why tests are
disabling gpu compositing.

R=zmo@chromium.org

Bug: 793303
Change-Id: I6ee99fc334c34c292bcb1e3568108e422d43da4c
Reviewed-on: https://chromium-review.googlesource.com/826382
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523958}
Former-commit-id: 1050c3acf132bb38bcd13b8e269bebd4f527a81b